--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="KD's Github Page : kd's Github Page" />
+    <meta name="description" content="kd's Github Page : " />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>KD's Github Page</title>
+    <title>kd's Github Page</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/kdii">View on GitHub</a>
 
-          <h1 id="project_title">KD's Github Page</h1>
-          <h2 id="project_tagline">kd's Github Page</h2>
+          <h1 id="project_title">kd's Github Page</h1>
+          <h2 id="project_tagline"></h2>
 
         </header>
     </div>
