--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <hr>
 
         <section id="main_content">
-          <p>To be built</p>
+          <p>To be built!</p>
 
 <p>-kd</p>
         </section>
