--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>kd's Github Page by kdii</title>
+    <title>微代言 by kdii</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>kd's Github Page</h1>
+          <h1>微代言</h1>
           <h2></h2>
         </header>
 
@@ -29,7 +29,7 @@
         <hr>
 
         <section id="main_content">
-          <p>To be built!</p>
+          <p>To be built</p>
 
 <p>-kd</p>
         </section>
