--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <title>微代言</title>
+    <title>位 代言</title>
   </head>
 
   <body>
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>微代言</h1>
-          <h2></h2>
+          <h1>位 代言</h1>
+          <h2>Bit says</h2>
         </header>
 
         <section id="downloads" class="clearfix">
