--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       <div class="inner">
 
         <header>
-          <h1>位 代言</h1>
-          <h2>Bit says</h2>
+          <h1>Bit Says</h1>
+          <h2></h2>
         </header>
 
         <section id="downloads" class="clearfix">
