--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@ title: Welcome to my Blog
 <!-- Pagination links -->
 <div id="post-pagination" class="pagination">
 <table>
-<tr>
+
   {% if paginator.previous_page %}
   <p class="previous">
     {% if paginator.previous_page == 1 %}
-    <a href="/">Previous</a>
+   <tr>   
+   <a href="/">Previous</a>
 	</tr>
     {% else %}
 	<tr>
@@ -31,18 +32,22 @@ title: Welcome to my Blog
   </p>
  
   {% else %}
-  <tr>
+  
   <p class="previous disabled">
-    <span>Previous</span>
+    <tr>
+	<span>Previous</span>
+    </tr> 
   </p>
-  </tr>
+  
   {% endif %}
-<tr>
+     
   <ul class="pages">
     <li class="page">
       {% if paginator.page == 1 %}
-      <tr> class="current-page">1</tr>
-      {% else %}
+	  <tr>
+      <a> class="current-page">1</a>
+      </tr>
+	  {% else %}
 	  <tr>
       <a href="/">1</a>
 	  </tr>
@@ -52,8 +57,10 @@ title: Welcome to my Blog
     {% for count in (2..paginator.total_pages) %}
     <li class="page">
       {% if count == paginator.page %}
-      <tr class="current-page">{{count}}</tr>
-      {% else %}
+	  <tr>
+      <a> class="current-page">{{count}}</a>
+      </tr>
+	  {% else %}
 	  <tr>
       <a href="/page{{count}}">{{count}}</a>
       </tr>
@@ -63,17 +70,21 @@ title: Welcome to my Blog
   </ul>
 
   {% if paginator.next_page %}
-  <tr>
+ 
   <p class="next">
-    <a href="/page{{paginator.next_page}}">Next</a>
-  </p>
-  </tr>
-  {% else %}
   <tr>
-  <p class="next disabled">
-    <span>Next</span>
-  </p>
+    <a href="/page{{paginator.next_page}}">Next</a>
   </tr>
+  </p>
+ 
+  {% else %}
+ 
+  <p class="next disabled">
+    <tr> 
+    <span>Next</span>
+    </tr>  
+ </p>
+ 
   {% endif %}
 </table>
 </div>
