--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ title: Welcome to my Blog
     <li class="page">
       {% if paginator.page == 1 %}
 	  <tr>
-      <a> class="current-page">1</a>
+      <a class="current-page">1</a>
       </tr>
 	  {% else %}
 	  <tr>
