--- a/index.html
+++ b/index.html
@@ -15,80 +15,36 @@ title: Welcome to my Blog
 {% endfor %}
 
 <!-- Pagination links -->
-<div id="post-pagination" class="pagination">
-<table>
-
-  {% if paginator.previous_page %}
-  <p class="previous">
-    {% if paginator.previous_page == 1 %}
-   <tr>   
-   <a href="/">Previous</a>
-	</tr>
-    {% else %}
-	<tr>
-    <a href="/page{{paginator.previous_page}}">Previous</a>
-	 </tr>  
-  {% endif %}
-
-  </p>
- 
-  {% else %}
-  
-  <p class="previous disabled">
-    <tr>
-	<span>Previous</span>
-    </tr> 
-  </p>
-  
-  {% endif %}
-     
-  <ul class="pages">
-    <li class="page">
-      {% if paginator.page == 1 %}
-	  <tr>
-      <a class="current-page">1</a>
-      </tr>
-	  {% else %}
-	  <tr>
-      <a href="/">1</a>
-	  </tr>
-      {% endif %}
-    </li>
-</tr>
-    {% for count in (2..paginator.total_pages) %}
-    <li class="page">
-      {% if count == paginator.page %}
-	  <tr>
-      <a class="current-page">{{count}}</a>
-      </tr>
-	  {% else %}
-	  <tr>
-      <a href="/page{{count}}">{{count}}</a>
-      </tr>
-	  {% endif %}
-    </li>
-    {% endfor %}
-  </ul>
-
-  {% if paginator.next_page %}
- 
-  <p class="next">
-  <tr>
-    <a href="/page{{paginator.next_page}}">Next</a>
-  </tr>
-  </p>
- 
-  {% else %}
- 
-  <p class="next disabled">
-    <tr> 
-    <span>Next</span>
-    </tr>  
- </p>
- 
-  {% endif %}
-</table>
-</div>
+ <div class="pagination">
+      <ul>
+        {% if paginator.previous_page %}
+          {% if paginator.previous_page == 1 %}
+          <li><a href="/">Prev</a></li>
+          {% else %}
+          <li><a href="/page{{ paginator.previous_page }}">Prev</a></li>
+          {% endif %}
+        {% else %}
+        <li><span class="disabled">Prev</span></li>
+        {% endif %}
+        {% if paginator.page == 1 %}
+        <li><span class="active">1</span></li>
+        {% else %}
+        <li><a href="/">1</a></li>
+        {% endif %}
+        {% for count in (2..paginator.total_pages) %}
+          {% if count == paginator.page %}
+          <li><span class="active">{{ count }}</span></li>
+          {% else %}
+          <li><a href="/page{{ count }}">{{ count }}</a></li>
+          {% endif %}
+        {% endfor %}
+        {% if paginator.next_page %}
+        <li><a href="/page{{ paginator.next_page }}">Next</a></li>
+        {% else %}
+        <li><span class="disabled">Next</span></li>
+        {% endif %}
+      </ul>
+    </div>
 
 
 
