--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ title: Welcome to my Blog
 {% endfor %}
 
 <!-- Pagination links -->
- <div class="pagination">
+<div class="row-fluid">
+  <div class="span12">
+    <div class="pagination">
       <ul>
         {% if paginator.previous_page %}
           {% if paginator.previous_page == 1 %}
@@ -45,7 +47,8 @@ title: Welcome to my Blog
         {% endif %}
       </ul>
     </div>
-
+  </div>
+</div>
 
 
 
