--- a/_posts/2010-01-23-find-a-new-place-to-blog.html
+++ b/_posts/2010-01-23-find-a-new-place-to-blog.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 published: true
-title: Find a new place to blog
+title: 迁移博客
 tags: censorship    
 permalink: /2010-01-23-find-a-new-place-to-blog.html
 ---
