--- a/_posts/2010-01-23-find-a-new-place-to-blog.html
+++ b/_posts/2010-01-23-find-a-new-place-to-blog.html
@@ -2,7 +2,7 @@
 layout: post
 published: true
 title: 迁移博客
-tags: censorship    
+tags:   
 permalink: /2010-01-23-find-a-new-place-to-blog.html
 ---
 {% include JB/setup %}
