--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title:
 {% for post in paginator.posts %}
 
    <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-   <div class="date">{{post.date | date: "%A, %d %B %Y" }}</div>
+   <div class="date">{{ page.date | date_to_long_string }}</div>
    <div>
     {{ post.content }}
    </div>
